fixed left marginand added border bottom on mobile

--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -25,6 +25,7 @@
 
       .movieResults {
         margin: 0 100px 50px 100px !important;
+        border-bottom: 1px grey solid;
 
     }
 
